--- a/app/views/admin/restaurants/index.html.erb
+++ b/app/views/admin/restaurants/index.html.erb
@@ -1,1 +1,12 @@
 <h1>餐廳後台</h1>
+<ul>
+  <%= @restaurants.each do |restaurant| %>
+    <li>
+      <%= restaurant.name %>
+      <%= link_to 'Show', admin_restaurant_path(restaurant) %>
+      <%= lint_to 'edit', edit_admin_restaurant_path(restaurant) %>
+      <%= link_to 'delete', admin_restaurant_path(restaurant), method: :delete, data: {confirm:"Are you sure?"} %>
+    </li>
+  <% end %>
+</ul>
+<%= link_to 'New Restaurant', new_admin_restaurant_path %>
