--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,6 @@
 
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
     <!-- 導覽列 -->
     <nav class="navbar navbar-default">
       <div class="container-fluid">
@@ -40,6 +38,22 @@
         </div>
       </div>
     </nav>
+    <% if flash[:notice] %>
+    <div class="container">
+      <div class="row">
+        <div class="alert alert-success"><%= notice %></div>
+      </div>
+    </div>
+    <% end %>
+
+    <% if flash[:alert] %>
+    <div class="container">
+      <div class="row">
+        <div class="alert alert-danger"><%= alert %></div>
+      </div>
+    </div>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
