--- a/app/views/admin/restaurants/show.html.erb
+++ b/app/views/admin/restaurants/show.html.erb
@@ -3,7 +3,8 @@
     <div class="col-md-12">
       <h1><%= @restaurant.name %></h1>
     </div>
-   <div class="col-md-4">
+    <div class="col-md-4">
+      <%= @restaurant.category.name %>
       <%= image_tag @restaurant.image, class: "img-responsive center-block" %>
       <br>
       <div class="well">
