--- a/app/views/admin/restaurants/_form.html.erb
+++ b/app/views/admin/restaurants/_form.html.erb
@@ -12,6 +12,9 @@
 <!-- 表單 -->
     <%= form_for [:admin, @restaurant] do |f| %>
       <div class="form-group">
+        <%= f.collection_select :category_id, Category.all, :id, :name, {prompt: true}, {class: "form-control"} %>
+      </div>
+      <div class="form-group">
         <%= f.label :name, "Name" %>
         <%= f.text_field :name, class: "form-control" %>
       </div>
