--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -9,15 +9,19 @@
       <div>
         <%= link_to 'Restaurant', admin_restaurants_path %> |
         <%= link_to 'Categories', admin_categories_path %>
+        <div class="form-inline" >
+          <%= form_for [:admin, @category] do |f| %>
+            <div class="form-group">
+              <%= f.text_field :name, placeholder: "Category Name",  class: "form-control" %>
+            </div>
+            <%= f.submit class: "btn btn-primary" %>
+          <% end %>
+          <% if @category.errors.any? %>
+            <%= @category.errors.full_messages.to_sentence %>
+          <% end %>
+        </div>
       </div>
-      <div class="form-inline" >
-        <%= form_for [:admin, @category] do |f| %>
-          <div class="form-group">
-            <%= f.text_field :name, placeholder: "Category Name",  class: "form-control" %>
-          </div>
-          <%= f.submit class: "btn btn-primary" %>
-        <% end %>
-      </div>
+
       <table class="table table-striped table-bordered">
         <thead>
           <tr>
