--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -4,22 +4,27 @@
 
 
   <div class="row">
-
     <div class="col-md-12">
       <div>
-        <%= link_to 'Restaurant', admin_restaurants_path %> |
+
+        <%= link_to 'Restaurants', admin_restaurants_path %> |
         <%= link_to 'Categories', admin_categories_path %>
+        
         <div class="form-inline" >
+
           <%= form_for [:admin, @category] do |f| %>
             <div class="form-group">
               <%= f.text_field :name, placeholder: "Category Name",  class: "form-control" %>
             </div>
             <%= f.submit class: "btn btn-primary" %>
           <% end %>
+          
           <% if @category.errors.any? %>
             <%= @category.errors.full_messages.to_sentence %>
           <% end %>
+        
         </div>
+        
       </div>
 
       <table class="table table-striped table-bordered">
@@ -27,6 +32,7 @@
           <tr>
             <th>#</th>
             <th>Category Name</th>
+            <th>#</th>
           </tr>
         </thead>
         <tbody>
@@ -34,12 +40,13 @@
           <tr>
             <th scope="row"><%= category.id %></th>
             <td><%= category.name %></td>
+            <td><%= link_to 'Edit', admin_categories_path(id: category.id) %></td>
           </tr>
           <% end %>
         </tbody>
       </table>
-
     </div>
 
   </div>
+
 </div>
