--- a/app/views/admin/restaurants/index.html.erb
+++ b/app/views/admin/restaurants/index.html.erb
@@ -6,7 +6,7 @@
 
     <div class="col-md-12">
       <div>
-        <%= link_to 'Restaurant', admin_restaurants_path %> |
+        <%= link_to 'Restaurants', admin_restaurants_path %> |
         <%= link_to 'Categories', admin_categories_path %>
       </div>
       <div>
