--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,11 +1,10 @@
 <div class="container">
-
   <div class="row">
     <ul class="nav nav-pills nav-pills-center">
-      <li role="presentation" class="active">
+      <li role="presentation">
       <%= link_to "全部餐廳", root_path %></li>
       <% @categories.each do |category| %>
-        <li>
+        <li class="<%= "active" if category == @category %>">
           <%= link_to category.name, category_path(category) %>
         </li>
       <% end %>
