--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,15 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
-      <h1><%= @user.name %></h1>
-    </div>
+
     <div class="col-md-4">
       <%= image_tag @user.avatar, class: "img-responsive center-block", width: '600px'%>
-      <br>
-      <div class="well">
-        <strong><%= @user.email %></strong>
-      </div>
     </div>
     <div class="col-md-8">
-      <%= simple_format @user.intro %>
-    </div>
-    <div class="clearfix"></div>
-    <hr>
-    <div>
+      <h1><%= @user.name %></h1>
+      <strong><%= @user.email %></strong>
+      <p><%= simple_format @user.intro %></p>
       <%= link_to '修改', edit_user_path(@user), class: "btn btn-primary" %>
     </div>
+    <hr>
   </div>
 </div>
