--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,9 @@
       <h1><%= @user.name %></h1>
       <strong><%= @user.email %></strong>
       <p><%= simple_format @user.intro %></p>
-      <%= link_to '修改', edit_user_path(@user), class: "btn btn-primary" %>
+      <% if current_user == @user %> 
+        <%= link_to '修改', edit_user_path(@user), class: "btn btn-primary" %>
+      <% end %>
     </div>
     <hr>
   </div>
