--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,5 +13,15 @@
       <% end %>
     </div>
     <hr>
+    <% @commented_restaurants.each do |restaurant| %>
+      <div class="col-sm-6 col-md-4">
+        <div class="restaurant-item">
+          <%= image_tag restaurant.image, class: "img-responsive center-block" %>
+          <div class="caption">
+            <h3><%= link_to restaurant.name, restaurant_path(restaurant) %></h3>
+          </div>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
