add style to commented_restaurants and remove duplicate

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -22,3 +22,10 @@
   float: none;
   display: inline-block;
 }
+.my-restaurant {
+  border: 1px solid #ddd;
+  display: inline-block;
+}
+.my-restaurant > div {
+  height: 60px;
+}
