--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,5 @@
 <div class="container">
   <div class="row">
-
     <div class="col-md-4">
       <%= image_tag @user.avatar, class: "img-responsive center-block", width: '600px'%>
     </div>
@@ -12,16 +11,20 @@
         <%= link_to '修改', edit_user_path(@user), class: "btn btn-primary" %>
       <% end %>
     </div>
-    <hr>
-    <% @commented_restaurants.each do |restaurant| %>
-      <div class="col-sm-6 col-md-4">
-        <div class="restaurant-item">
-          <%= image_tag restaurant.image, class: "img-responsive center-block" %>
-          <div class="caption">
-            <h3><%= link_to restaurant.name, restaurant_path(restaurant) %></h3>
-          </div>
-        </div>
-      </div>
-    <% end %>
   </div>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <%= @commented_restaurants.count%> 已評論餐廳</div>
+    <div class="panel-body">
+      <% @commented_restaurants.each do |restaurant| %>
+        <%= link_to restaurant_path(restaurant) do %>
+          <div class="my-restaurant">
+            <div><%= image_tag restaurant.image, class: "img-responsive center-block" %></div>
+            <h5><%= restaurant.name %></h5>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+
 </div>
