--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,5 +1,8 @@
 <div class="container">
-
+  <ul class="nav nav-tabs">
+    <li role="presentation" class="active"><a href="#">首頁</a></li>
+    <li role="presentation"><%= link_to "最新動態", feeds_restaurants_path %></li>
+  </ul>
   <div class="row">
     <ul class="nav nav-pills nav-pills-center">
       <li role="presentation" class="active">
