user can link to dashboard form restaurant show page

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -17,6 +17,9 @@
     </div>
     <div class="col-md-8">
       <%= simple_format @restaurant.description %>
+      <%= link_to dashboard_restaurant_path do%>
+        <button class="btn btn-primary">Dashboard</button>
+      <% end %>
     </div>
     <div class="clearfix"></div>
     <hr>
