--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -17,9 +17,9 @@
     </div>
     <div class="col-md-8">
       <%= simple_format @restaurant.description %>
-      <%= link_to dashboard_restaurant_path do%>
-        <button class="btn btn-primary">Dashboard</button>
-      <% end %>
+      <%= link_to "Dashboard", dashboard_restaurant_path, class:"btn btn-primary" %>
+      <%= link_to 'Favorite', favorite_restaurant_path(@restaurant), method: :post, class: "btn btn-primary" %>
+      <%= link_to 'Unfavorite', unfavorite_restaurant_path(@restaurant), method: :post, class: "btn btn-info" %>
     </div>
     <div class="clearfix"></div>
     <hr>
