--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -19,6 +19,7 @@
       <%= simple_format @restaurant.description %>
       <%= link_to "Dashboard", dashboard_restaurant_path, class:"btn btn-primary" %>
       <%= render partial: "shared/favorite", locals: {restaurant: @restaurant} %>
+      <%= render partial: "shared/like", locals: {restaurant: @restaurant} %>
     </div>
     <div class="clearfix"></div>
     <hr>
