--- a/app/views/restaurants/ranking.html.erb
+++ b/app/views/restaurants/ranking.html.erb
@@ -1,3 +1,8 @@
+  <ul class="nav nav-tabs">
+    <li role="presentation"><a href="#">首頁</a></li>
+    <li role="presentation"><%= link_to "最新動態", feeds_restaurants_path %></li>
+    <li role="presentation" class="active"><%= link_to "Top10人氣餐廳", ranking_restaurants_path %></li>
+  </ul>
 <h1>Top 10 人氣餐廳</h1>
 <h3>（收藏數最高）<h3>
 <% @top_restaurants.each do |restaurant| %>
