--- a/app/views/restaurants/ranking.html.erb
+++ b/app/views/restaurants/ranking.html.erb
@@ -1,18 +1,32 @@
+<div class="container">
   <ul class="nav nav-tabs">
     <li role="presentation"><a href="#">首頁</a></li>
     <li role="presentation"><%= link_to "最新動態", feeds_restaurants_path %></li>
     <li role="presentation" class="active"><%= link_to "Top10人氣餐廳", ranking_restaurants_path %></li>
   </ul>
-<h1>Top 10 人氣餐廳</h1>
-<h3>（收藏數最高）<h3>
-<% @top_restaurants.each do |restaurant| %>
-  <%= image_tag restaurant.image %>
-  <br>
-  <%= restaurant.name %>
-  <%= restaurant.favorites_count %>
-  <%= restaurant.description %>
-  <%= link_to "show", restaurant_path(restaurant), class:"btn btn-primary" %>
-  <%= render partial: "shared/favorite", locals: {restaurant: restaurant} %>
-  <br>
-  <hr>
-<% end %>
+  <div class="container">
+    <div class="row">
+      <h1>Top 10 人氣餐廳 <small>（收藏數最高）</small> </h1>
+      <hr>
+      <% @top_restaurants.each do |restaurant| %>
+        <div class="container">
+          <div class="col-md-3 col-sm-4 col-xs-12">
+            <%= image_tag restaurant.image, class:"img-responsive"%>
+          </div>
+          <div class="col-md-9 col-sm-8 col-xs-12">
+            <div class="well">
+              <h4><%= restaurant.name %></h4>
+              <ul class="list-unstyled">
+                <li><strong>收藏數：</strong><%= restaurant.favorites_count %></li>
+                <li><strong>餐廳介紹：</strong><%= truncate(restaurant.description, length: 140) %></li>
+              </ul>
+              <%= link_to "show", restaurant_path(restaurant), class:"btn btn-primary" %>
+              <%= render partial: "shared/favorite", locals: {restaurant: restaurant} %>
+            </div>
+          </div>
+        </div>
+        <hr>
+      <% end %>
+    </div>
+  </div>
+</div>
