--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -9,6 +9,7 @@
       <br>
       <div class="well">
         <ul class="list-unstyled">
+          <li><strong>收藏數:</strong> <%= @restaurant.favorites_count %></li>
           <li><strong>Opening Hour:</strong> <%= @restaurant.opening_hours %></li>
           <li><strong>Tel:</strong> <%= @restaurant.tel %></li>
           <li><strong>Address:</strong> <%= @restaurant.address %></li>
