--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,13 @@
 <ul>
 
   <% @users.each do |user| %>
-    <li>
-      <%= user.name %>
-      <%= link_to 'Follow', followships_path(following_id: user), method: :post %>
-      <%= link_to 'Unfollow', followship_path(user), method: :delete %>
-    </li>
+    <% if user != current_user %>
+      <li>
+        <%= user.name %>
+        <%= link_to 'Follow', followships_path(following_id: user), method: :post %>
+        <%= link_to 'Unfollow', followship_path(user), method: :delete %>
+      </li>
+    <% end %>
   <% end %>
 
 </ul>
