add partial for follow / unfollow button

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,10 @@
 <ul>
 
   <% @users.each do |user| %>
-    <% if user != current_user %>
-      <li>
-        <%= user.name %>
-        <% if current_user.following?(user)%>
-          <%= link_to 'Unfollow', followship_path(user), method: :delete %>
-        <% else %>
-          <%= link_to 'Follow', followships_path(following_id: user), method: :post %>
-        <% end %>
-      </li>
-    <% end %>
+    <li>
+      <%= user.name %>
+      <%= render partial: "shared/follow", locals: {user: user} %>
+    </li>
   <% end %>
 
 </ul>
