--- a/app/views/restaurants/feeds.html.erb
+++ b/app/views/restaurants/feeds.html.erb
@@ -3,6 +3,7 @@
     <li role="presentation"><%= link_to "首頁", root_path %></li>
     <li role="presentation" class="active"><a href="#">最新動態</a></li>
     <li role="presentation"><%= link_to "Top10人氣餐廳", ranking_restaurants_path %></li>
+    <li role="presentation"><%= link_to "美食達人", users_path %></li>
   </ul>
   <div class="container">
     <div class="row">
