--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,8 +1,9 @@
 <div class="container">
   <ul class="nav nav-tabs">
-    <li role="presentation" class="active"><a href="#">首頁</a></li>
+    <li role="presentation" class="active"><%= link_to "首頁", root_path %></li>
     <li role="presentation"><%= link_to "最新動態", feeds_restaurants_path %></li>
     <li role="presentation"><%= link_to "Top10人氣餐廳", ranking_restaurants_path %></li>
+    <li role="presentation"><%= link_to "美食達人", users_path %></li>
   </ul>
   <div class="row">
     <ul class="nav nav-pills nav-pills-center">
