--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,18 @@
-<ul>
-
-  <% @users.each do |user| %>
-    <li>
-      <%= user.name %>
-      <%= render partial: "shared/follow", locals: {user: user} %>
-    </li>
-  <% end %>
-
-</ul>
+<div class="container">
+  <ul class="nav nav-tabs">
+    <li role="presentation"><%= link_to "首頁", root_path %></li>
+    <li role="presentation"><%= link_to "最新動態", feeds_restaurants_path %></li>
+    <li role="presentation"><%= link_to "Top10人氣餐廳", ranking_restaurants_path %></li>
+    <li role="presentation" class="active"><%= link_to "美食達人", users_path %></li>
+  </ul>
+  <div class="row">
+    <h1>美食達人</h1><hr>
+      <% @users.each do |user| %>
+        <div class="col-md-3 col-sm-4 col-xs-6  text-center user-item">
+          <img src="http://via.placeholder.com/150x150" alt="placeholder" class="img-responsive center-block">
+          <h4 class="text-center"><%= link_to user.name, user_path(user) %></h4>
+          <%= render partial: "shared/follow", locals: {user: user} %>
+        </div>      
+      <% end %>
+  </div>
+</div>
