add botton for adding friend in user index page

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,6 +12,7 @@
           <img src="http://via.placeholder.com/150x150" alt="placeholder" class="img-responsive center-block">
           <h4 class="text-center"><%= link_to user.name, user_path(user) %></h4>
           <%= render partial: "shared/follow", locals: {user: user} %>
+          <%= render partial: "shared/friend", locals: {user: user} %>
         </div>      
       <% end %>
   </div>
