--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,7 @@
       <p><%= simple_format @user.intro %></p>
       <% if current_user == @user %> 
         <%= link_to '修改', edit_user_path(@user), class: "btn btn-primary" %>
+        <%= link_to '我的好友', friend_list_user_path(@user), class: "btn btn-primary" %>
       <% end %>
     </div>
   </div>
